--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,8 @@
 project:
   type: book
   output-dir: docs
+  resources:
+    - CNAME
   
 
 execute:
@@ -104,6 +106,7 @@ format:
     code-fold: true
     code-block-bg: true
     code-block-border-left: "#31BAE9"
+    title-block-style: none
     include-in-header:
       text: |
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet"/>
