--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ narwhals==1.20.1
 nbclient==0.10.0
 nbformat==5.10.4
 nest-asyncio==1.6.0
-numpy==2.0.2
+numpy==2.1.0
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
@@ -67,6 +67,7 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==18.1.0
 pydeck==0.9.1
+pydot==4.0.1
 Pygments==2.18.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
@@ -77,7 +78,7 @@ referencing==0.35.1
 requests==2.32.3
 rich==13.9.4
 rpds-py==0.20.0
-scipy==1.13.1
+scipy==1.14.1
 shutilwhich==1.1.0
 six==1.16.0
 smmap==5.0.1
