--- a/_quarto.yml
+++ b/_quarto.yml
@@ -58,7 +58,7 @@ book:
   sidebar:
     tools:
       - icon: chat-square-text
-        href: https://chat.derivative-securities.org/
+        href: https://notebooklm.google.com/notebook/701244f5-4833-4217-875d-96380578825b
   title: Pricing and Hedging Derivative Securities
   reader-mode: true 
   repo-url: "https://github.com/math-finance-book/book-published-code.git"
